updated pandas folders and added files

--- a/Pandas/Pandas_Part_1/1_pd.Series.ipynb
+++ b/Pandas/Pandas_Part_1/1_pd.Series.ipynb
@@ -284,6 +284,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "14ac32ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                             7\n",
+       "1                           dog\n",
+       "2                         False\n",
+       "3    <built-in function arange>\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mix_data = [7, \"dog\", False, np.arange]\n",
+    "pd.Series(mix_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "34815321",
    "metadata": {},
@@ -1037,7 +1063,7 @@
     }
    ],
    "source": [
-    "people[\"John\":\"Jason\"]  # don't use square brackets when slicing"
+    "people[\"John\":\"Jason\"]  # don't use square brackets twice when slicing"
    ]
   },
   {
