--- a/NumPy/np.Saving_Loading_Files.ipynb
+++ b/NumPy/np.Saving_Loading_Files.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"numbers\", arr)  # .npy uzantılı olarak çalışma dizinine / bilgisayara kaydettik"
+    "np.save(\"numbers\", arr)  # We saved it in the working directory as .npy extension"
    ]
   },
   {
