--- a/NumPy/np.Saving_Loading_Files.ipynb
+++ b/NumPy/np.Saving_Loading_Files.ipynb
@@ -118,8 +118,8 @@
     }
    ],
    "source": [
-    "filedata = np.genfromtxt('numbers.txt', delimiter=',') # 10*10 olduğu için hata vermedi\n",
-    "filedata = filedata.astype(\"int32\") # alan daraldı, çünkü noktalar gitti\n",
+    "filedata = np.genfromtxt('numbers.txt', delimiter=',') # it doesn't give an error since the matrix has a 10*10 shape\n",
+    "filedata = filedata.astype(\"int32\") # the field is narrowed as the dots are gone\n",
     "print(filedata)"
    ]
   }
