--- a/Pandas/Pandas_Part_1/3_pd.DataFrames_Basics_(Attributes).ipynb
+++ b/Pandas/Pandas_Part_1/3_pd.DataFrames_Basics_(Attributes).ipynb
@@ -2526,6 +2526,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "be9bc101",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Southampton', 'Cherbourg', 'Queenstown'], dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"embark_town\"].value_counts().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b91be5a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Southampton', 'Cherbourg', 'Queenstown']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"embark_town\"].value_counts().index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "id": "f9767cb2",
    "metadata": {},
