--- a/Pandas/Pandas_Part_2/12_pd.Useful_Methods_(apply, map, transform, applymap).ipynb
+++ b/Pandas/Pandas_Part_2/12_pd.Useful_Methods_(apply, map, transform, applymap).ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "47d708e3",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "7a1c114f",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "      <th>7</th>\n",
        "      <td>Fiji</td>\n",
        "      <td>Suva</td>\n",
-       "      <td>Oceania/Australia</td>\n",
+       "      <td>Australia/Oceania</td>\n",
        "      <td>896444</td>\n",
        "      <td>18270</td>\n",
        "      <td>49</td>\n",
@@ -159,7 +159,7 @@
        "4    Poland    Warsaw             Europe    37846611     306230      124   \n",
        "5    Canada    Ottawa      North America    37742154    9093510        4   \n",
        "6     Japan     Tokyo               Asia   126476461     364555      346   \n",
-       "7      Fiji      Suva  Oceania/Australia      896444      18270       49   \n",
+       "7      Fiji      Suva  Australia/Oceania      896444      18270       49   \n",
        "\n",
        "  ocean_coast  \n",
        "0       False  \n",
@@ -172,7 +172,7 @@
        "7        True  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,6 +512,35 @@
    ],
    "source": [
     "df.loc[:, \"country\":\"continent\"].apply(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b9db1348",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    above100\n",
+       "1      others\n",
+       "2    above100\n",
+       "3     below50\n",
+       "4    above100\n",
+       "5     below50\n",
+       "6    above100\n",
+       "7     below50\n",
+       "Name: density, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.density.apply(lambda x : \"above100\" if x >=100 else (\"below50\" if x<50 else \"others\"))"
    ]
   },
   {
