--- a/Matplotlib/1.plt.Matplotlib Basics (Line Plots).ipynb
+++ b/Matplotlib/1.plt.Matplotlib Basics (Line Plots).ipynb
@@ -484,7 +484,7 @@
    "id": "d6b1c7a3",
    "metadata": {},
    "source": [
-    "## save"
+    "## figure saving"
    ]
   },
   {
@@ -505,6 +505,16 @@
    "outputs": [],
    "source": [
     "plt.savefig('myFigure.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4a53235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savefig(fname, dpi=None, facecolor=\"w\", edgecolor=\"w\")"
    ]
   }
  ],
