--- a/Pandas/Pandas_Part_2/19_pd.Time_Methods.ipynb
+++ b/Pandas/Pandas_Part_2/19_pd.Time_Methods.ipynb
@@ -1525,9 +1525,593 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67a8a82b",
+   "metadata": {},
+   "source": [
+    "## EXAMPLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3ee94cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = \"https://raw.githubusercontent.com/codebasics/py/master/pandas/14_ts_datetimeindex/aapl.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "94d12e0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7e197e65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7-Jul-17</td>\n",
+       "      <td>142.90</td>\n",
+       "      <td>144.75</td>\n",
+       "      <td>142.90</td>\n",
+       "      <td>144.18</td>\n",
+       "      <td>19201712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6-Jul-17</td>\n",
+       "      <td>143.02</td>\n",
+       "      <td>143.50</td>\n",
+       "      <td>142.41</td>\n",
+       "      <td>142.73</td>\n",
+       "      <td>24128782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5-Jul-17</td>\n",
+       "      <td>143.69</td>\n",
+       "      <td>144.79</td>\n",
+       "      <td>142.72</td>\n",
+       "      <td>144.09</td>\n",
+       "      <td>21569557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3-Jul-17</td>\n",
+       "      <td>144.88</td>\n",
+       "      <td>145.30</td>\n",
+       "      <td>143.10</td>\n",
+       "      <td>143.50</td>\n",
+       "      <td>14277848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30-Jun-17</td>\n",
+       "      <td>144.45</td>\n",
+       "      <td>144.96</td>\n",
+       "      <td>143.78</td>\n",
+       "      <td>144.02</td>\n",
+       "      <td>23024107</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date    Open    High     Low   Close    Volume\n",
+       "0   7-Jul-17  142.90  144.75  142.90  144.18  19201712\n",
+       "1   6-Jul-17  143.02  143.50  142.41  142.73  24128782\n",
+       "2   5-Jul-17  143.69  144.79  142.72  144.09  21569557\n",
+       "3   3-Jul-17  144.88  145.30  143.10  143.50  14277848\n",
+       "4  30-Jun-17  144.45  144.96  143.78  144.02  23024107"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0a2ba64e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 251 entries, 0 to 250\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   Date    251 non-null    object \n",
+      " 1   Open    251 non-null    float64\n",
+      " 2   High    251 non-null    float64\n",
+      " 3   Low     251 non-null    float64\n",
+      " 4   Close   251 non-null    float64\n",
+      " 5   Volume  251 non-null    int64  \n",
+      "dtypes: float64(4), int64(1), object(1)\n",
+      "memory usage: 11.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f6e66f68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Date'] = pd.to_datetime(df['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "204192cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-07-07</th>\n",
+       "      <td>142.90</td>\n",
+       "      <td>144.75</td>\n",
+       "      <td>142.90</td>\n",
+       "      <td>144.18</td>\n",
+       "      <td>19201712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-06</th>\n",
+       "      <td>143.02</td>\n",
+       "      <td>143.50</td>\n",
+       "      <td>142.41</td>\n",
+       "      <td>142.73</td>\n",
+       "      <td>24128782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-05</th>\n",
+       "      <td>143.69</td>\n",
+       "      <td>144.79</td>\n",
+       "      <td>142.72</td>\n",
+       "      <td>144.09</td>\n",
+       "      <td>21569557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-03</th>\n",
+       "      <td>144.88</td>\n",
+       "      <td>145.30</td>\n",
+       "      <td>143.10</td>\n",
+       "      <td>143.50</td>\n",
+       "      <td>14277848</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-30</th>\n",
+       "      <td>144.45</td>\n",
+       "      <td>144.96</td>\n",
+       "      <td>143.78</td>\n",
+       "      <td>144.02</td>\n",
+       "      <td>23024107</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open    High     Low   Close    Volume\n",
+       "Date                                                \n",
+       "2017-07-07  142.90  144.75  142.90  144.18  19201712\n",
+       "2017-07-06  143.02  143.50  142.41  142.73  24128782\n",
+       "2017-07-05  143.69  144.79  142.72  144.09  21569557\n",
+       "2017-07-03  144.88  145.30  143.10  143.50  14277848\n",
+       "2017-06-30  144.45  144.96  143.78  144.02  23024107"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.set_index(\"Date\", inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8f173d85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['year_month'] = df.index.strftime('%Y-%m')\n",
+    "df['year'] = df.index.year\n",
+    "df['month'] = df.index.month\n",
+    "df['day_of_month'] = df.index.day\n",
+    "df['day_of_week'] = df.index.weekday\n",
+    "df['name_of_day'] = df.index.day_name()\n",
+    "# df['hour'] = df.index.hour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bbe56b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>year_month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_of_month</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>name_of_day</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-07-07</th>\n",
+       "      <td>142.90</td>\n",
+       "      <td>144.75</td>\n",
+       "      <td>142.90</td>\n",
+       "      <td>144.18</td>\n",
+       "      <td>19201712</td>\n",
+       "      <td>2017-07</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-06</th>\n",
+       "      <td>143.02</td>\n",
+       "      <td>143.50</td>\n",
+       "      <td>142.41</td>\n",
+       "      <td>142.73</td>\n",
+       "      <td>24128782</td>\n",
+       "      <td>2017-07</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-05</th>\n",
+       "      <td>143.69</td>\n",
+       "      <td>144.79</td>\n",
+       "      <td>142.72</td>\n",
+       "      <td>144.09</td>\n",
+       "      <td>21569557</td>\n",
+       "      <td>2017-07</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-07-03</th>\n",
+       "      <td>144.88</td>\n",
+       "      <td>145.30</td>\n",
+       "      <td>143.10</td>\n",
+       "      <td>143.50</td>\n",
+       "      <td>14277848</td>\n",
+       "      <td>2017-07</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-06-30</th>\n",
+       "      <td>144.45</td>\n",
+       "      <td>144.96</td>\n",
+       "      <td>143.78</td>\n",
+       "      <td>144.02</td>\n",
+       "      <td>23024107</td>\n",
+       "      <td>2017-06</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>6</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-15</th>\n",
+       "      <td>98.92</td>\n",
+       "      <td>99.30</td>\n",
+       "      <td>98.50</td>\n",
+       "      <td>98.78</td>\n",
+       "      <td>30136990</td>\n",
+       "      <td>2016-07</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-14</th>\n",
+       "      <td>97.39</td>\n",
+       "      <td>98.99</td>\n",
+       "      <td>97.32</td>\n",
+       "      <td>98.79</td>\n",
+       "      <td>38918997</td>\n",
+       "      <td>2016-07</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-13</th>\n",
+       "      <td>97.41</td>\n",
+       "      <td>97.67</td>\n",
+       "      <td>96.84</td>\n",
+       "      <td>96.87</td>\n",
+       "      <td>25892171</td>\n",
+       "      <td>2016-07</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-12</th>\n",
+       "      <td>97.17</td>\n",
+       "      <td>97.70</td>\n",
+       "      <td>97.12</td>\n",
+       "      <td>97.42</td>\n",
+       "      <td>24167463</td>\n",
+       "      <td>2016-07</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-07-11</th>\n",
+       "      <td>96.75</td>\n",
+       "      <td>97.65</td>\n",
+       "      <td>96.73</td>\n",
+       "      <td>96.98</td>\n",
+       "      <td>23794945</td>\n",
+       "      <td>2016-07</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>7</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>251 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open    High     Low   Close    Volume year_month  year  month  \\\n",
+       "Date                                                                           \n",
+       "2017-07-07  142.90  144.75  142.90  144.18  19201712    2017-07  2017      7   \n",
+       "2017-07-06  143.02  143.50  142.41  142.73  24128782    2017-07  2017      7   \n",
+       "2017-07-05  143.69  144.79  142.72  144.09  21569557    2017-07  2017      7   \n",
+       "2017-07-03  144.88  145.30  143.10  143.50  14277848    2017-07  2017      7   \n",
+       "2017-06-30  144.45  144.96  143.78  144.02  23024107    2017-06  2017      6   \n",
+       "...            ...     ...     ...     ...       ...        ...   ...    ...   \n",
+       "2016-07-15   98.92   99.30   98.50   98.78  30136990    2016-07  2016      7   \n",
+       "2016-07-14   97.39   98.99   97.32   98.79  38918997    2016-07  2016      7   \n",
+       "2016-07-13   97.41   97.67   96.84   96.87  25892171    2016-07  2016      7   \n",
+       "2016-07-12   97.17   97.70   97.12   97.42  24167463    2016-07  2016      7   \n",
+       "2016-07-11   96.75   97.65   96.73   96.98  23794945    2016-07  2016      7   \n",
+       "\n",
+       "            day_of_month  day_of_week name_of_day  \n",
+       "Date                                               \n",
+       "2017-07-07             7            4      Friday  \n",
+       "2017-07-06             6            3    Thursday  \n",
+       "2017-07-05             5            2   Wednesday  \n",
+       "2017-07-03             3            0      Monday  \n",
+       "2017-06-30            30            4      Friday  \n",
+       "...                  ...          ...         ...  \n",
+       "2016-07-15            15            4      Friday  \n",
+       "2016-07-14            14            3    Thursday  \n",
+       "2016-07-13            13            2   Wednesday  \n",
+       "2016-07-12            12            1     Tuesday  \n",
+       "2016-07-11            11            0      Monday  \n",
+       "\n",
+       "[251 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0bdbfc25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 251 entries, 2017-07-07 to 2016-07-11\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Open          251 non-null    float64\n",
+      " 1   High          251 non-null    float64\n",
+      " 2   Low           251 non-null    float64\n",
+      " 3   Close         251 non-null    float64\n",
+      " 4   Volume        251 non-null    int64  \n",
+      " 5   year_month    251 non-null    object \n",
+      " 6   year          251 non-null    int64  \n",
+      " 7   month         251 non-null    int64  \n",
+      " 8   day_of_month  251 non-null    int64  \n",
+      " 9   day_of_week   251 non-null    int64  \n",
+      " 10  name_of_day   251 non-null    object \n",
+      "dtypes: float64(4), int64(5), object(2)\n",
+      "memory usage: 23.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6732256c",
+   "id": "c24141ce",
    "metadata": {},
    "outputs": [],
    "source": []
